// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`gux-form-field-select multi select dropdown #render help multi select should render component as expected 1`] = `
<gux-form-field-dropdown>
  <mock:shadow-root>
    <div class="gux-above gux-form-field-container">
      <div class="gux-above gux-form-field-label">
        <slot name="label"></slot>
      </div>
      <div class="gux-input-and-error-container">
        <div class="gux-input">
          <slot></slot>
        </div>
        <div class="gux-form-field-error">
          <gux-icon decorative="" icon-name="alert-warning-octogon"></gux-icon>
          <div class="gux-message">
            <slot name="error"></slot>
          </div>
        </div>
        <div class="gux-form-field-help gux-show">
          <div class="gux-message">
            <slot name="help"></slot>
          </div>
        </div>
      </div>
    </div>
  </mock:shadow-root>
  <gux-dropdown-multi-beta>
    <mock:shadow-root>
      <div class="gux-dropdown-container">
        <gux-popup-beta>
          <div class="gux-target-container gux-target-container-collapsed" slot="target">
            <button aria-expanded="false" aria-haspopup="listbox" class="gux-field gux-field-button" type="button">
              <div class="gux-field-content">
                <div class="gux-placeholder">
                  Select...
                </div>
              </div>
              <gux-icon class="gux-expand-icon" iconname="chevron-small-down" screenreader-text="Dropdown"></gux-icon>
            </button>
          </div>
          <div class="gux-listbox-container" slot="popup">
            <slot></slot>
          </div>
        </gux-popup-beta>
      </div>
    </mock:shadow-root>
    <gux-listbox-multi aria-describedby="gux-form-field-help-i" aria-multiselectable="true" id="gux-form-field-input-i" role="listbox" tabindex="0">
      <mock:shadow-root>
        <slot></slot>
        <slot name="create"></slot>
      </mock:shadow-root>
      <gux-option-multi aria-disabled="true" aria-selected="false" class="gux-disabled" disabled="" id="gux-option-multi-i" role="option" value="a">
        <!---->
        <div class="gux-option" gux-slot-container="">
          Ant
        </div>
      </gux-option-multi>
      <gux-option-multi aria-disabled="false" aria-selected="false" id="gux-option-multi-i" role="option" value="b">
        <!---->
        <div class="gux-option" gux-slot-container="">
          Bat
        </div>
      </gux-option-multi>
      <gux-option-multi aria-disabled="false" aria-selected="false" id="gux-option-multi-i" role="option" value="c">
        <!---->
        <div class="gux-option" gux-slot-container="">
          Cat
        </div>
      </gux-option-multi>
    </gux-listbox-multi>
  </gux-dropdown-multi-beta>
  <label for="gux-form-field-input-i" slot="label">
    Default
  </label>
  <span id="gux-form-field-help-i" slot="help">
    This is a help message
  </span>
</gux-form-field-dropdown>
`;

exports[`gux-form-field-select multi select dropdown #render help should render component as expected 1`] = `
<gux-form-field-dropdown>
  <mock:shadow-root>
    <div class="gux-above gux-form-field-container">
      <div class="gux-above gux-form-field-label">
        <slot name="label"></slot>
      </div>
      <div class="gux-input-and-error-container">
        <div class="gux-input">
          <slot></slot>
        </div>
        <div class="gux-form-field-error">
          <gux-icon decorative="" icon-name="alert-warning-octogon"></gux-icon>
          <div class="gux-message">
            <slot name="error"></slot>
          </div>
        </div>
        <div class="gux-form-field-help gux-show">
          <div class="gux-message">
            <slot name="help"></slot>
          </div>
        </div>
      </div>
    </div>
  </mock:shadow-root>
  <gux-dropdown>
    <mock:shadow-root>
      <gux-popup-beta>
        <div class="gux-target-container-collapsed" slot="target">
          <button aria-expanded="false" aria-haspopup="listbox" class="gux-field gux-field-button" type="button">
            <div class="gux-field-content">
              <div class="gux-placeholder">
                Select...
              </div>
            </div>
            <gux-icon class="gux-expand-icon" iconname="chevron-small-down" screenreader-text="Dropdown"></gux-icon>
          </button>
        </div>
        <div class="gux-listbox-container" slot="popup">
          <slot></slot>
        </div>
      </gux-popup-beta>
    </mock:shadow-root>
    <gux-listbox aria-describedby="gux-form-field-help-i" id="gux-form-field-input-i" role="listbox" tabindex="0">
      <mock:shadow-root>
        <slot></slot>
      </mock:shadow-root>
      <gux-option aria-disabled="true" class="gux-disabled" disabled="" id="gux-option-i" role="option" value="a">
        <!---->
        Ant
      </gux-option>
      <gux-option aria-disabled="false" aria-selected="false" id="gux-option-i" role="option" value="b">
        <!---->
        Bat
      </gux-option>
      <gux-option aria-disabled="false" aria-selected="false" id="gux-option-i" role="option" value="c">
        <!---->
        Cat
      </gux-option>
    </gux-listbox>
  </gux-dropdown>
  <label for="gux-form-field-input-i" slot="label">
    Default
  </label>
  <span id="gux-form-field-help-i" slot="help">
    This is a help message
  </span>
</gux-form-field-dropdown>
`;

exports[`gux-form-field-select multi select dropdown #render input attributes should render component as expected (1) 1`] = `
<gux-form-field-dropdown>
  <mock:shadow-root>
    <div class="gux-above gux-form-field-container">
      <div class="gux-above gux-form-field-label">
        <slot name="label"></slot>
      </div>
      <div class="gux-input-and-error-container">
        <div class="gux-input">
          <slot></slot>
        </div>
        <div class="gux-form-field-error">
          <gux-icon decorative="" icon-name="alert-warning-octogon"></gux-icon>
          <div class="gux-message">
            <slot name="error"></slot>
          </div>
        </div>
        <div class="gux-form-field-help">
          <div class="gux-message">
            <slot name="help"></slot>
          </div>
        </div>
      </div>
    </div>
  </mock:shadow-root>
  <gux-dropdown-multi-beta>
    <mock:shadow-root>
      <div class="gux-dropdown-container">
        <gux-popup-beta>
          <div class="gux-target-container gux-target-container-collapsed" slot="target">
            <button aria-expanded="false" aria-haspopup="listbox" class="gux-field gux-field-button" type="button">
              <div class="gux-field-content">
                <div class="gux-placeholder">
                  Select...
                </div>
              </div>
              <gux-icon class="gux-expand-icon" iconname="chevron-small-down" screenreader-text="Dropdown"></gux-icon>
            </button>
          </div>
          <div class="gux-listbox-container" slot="popup">
            <slot></slot>
          </div>
        </gux-popup-beta>
      </div>
    </mock:shadow-root>
    <gux-listbox-multi aria-multiselectable="true" id="gux-form-field-input-i" role="listbox" tabindex="0">
      <mock:shadow-root>
        <slot></slot>
        <slot name="create"></slot>
      </mock:shadow-root>
      <gux-option-multi aria-disabled="true" aria-selected="false" class="gux-disabled" disabled="" id="gux-option-multi-i" role="option" value="a">
        <!---->
        <div class="gux-option" gux-slot-container="">
          Ant
        </div>
      </gux-option-multi>
      <gux-option-multi aria-disabled="false" aria-selected="false" id="gux-option-multi-i" role="option" value="b">
        <!---->
        <div class="gux-option" gux-slot-container="">
          Bat
        </div>
      </gux-option-multi>
      <gux-option-multi aria-disabled="false" aria-selected="false" id="gux-option-multi-i" role="option" value="c">
        <!---->
        <div class="gux-option" gux-slot-container="">
          Cat
        </div>
      </gux-option-multi>
    </gux-listbox-multi>
  </gux-dropdown-multi-beta>
  <label for="gux-form-field-input-i" slot="label">
    Default
  </label>
</gux-form-field-dropdown>
`;

exports[`gux-form-field-select multi select dropdown #render input attributes should render component as expected (2) 1`] = `
<gux-form-field-dropdown>
  <mock:shadow-root>
    <div class="gux-above gux-form-field-container">
      <div class="gux-above gux-form-field-label">
        <slot name="label"></slot>
      </div>
      <div class="gux-input-and-error-container">
        <div class="gux-disabled gux-input">
          <slot></slot>
        </div>
        <div class="gux-form-field-error">
          <gux-icon decorative="" icon-name="alert-warning-octogon"></gux-icon>
          <div class="gux-message">
            <slot name="error"></slot>
          </div>
        </div>
        <div class="gux-form-field-help">
          <div class="gux-message">
            <slot name="help"></slot>
          </div>
        </div>
      </div>
    </div>
  </mock:shadow-root>
  <gux-dropdown-multi-beta disabled="">
    <mock:shadow-root>
      <div class="gux-dropdown-container">
        <gux-popup-beta disabled="">
          <div class="gux-target-container gux-target-container-collapsed" slot="target">
            <button aria-expanded="false" aria-haspopup="listbox" class="gux-field gux-field-button" disabled="" type="button">
              <div class="gux-field-content">
                <div class="gux-placeholder">
                  Select...
                </div>
              </div>
              <gux-icon class="gux-expand-icon" iconname="chevron-small-down" screenreader-text="Dropdown"></gux-icon>
            </button>
          </div>
          <div class="gux-listbox-container" slot="popup">
            <slot></slot>
          </div>
        </gux-popup-beta>
      </div>
    </mock:shadow-root>
    <gux-listbox-multi aria-multiselectable="true" id="gux-form-field-input-i" role="listbox" tabindex="0">
      <mock:shadow-root>
        <slot></slot>
        <slot name="create"></slot>
      </mock:shadow-root>
      <gux-option-multi aria-disabled="true" aria-selected="false" class="gux-disabled" disabled="" id="gux-option-multi-i" role="option" value="a">
        <!---->
        <div class="gux-option" gux-slot-container="">
          Ant
        </div>
      </gux-option-multi>
      <gux-option-multi aria-disabled="false" aria-selected="false" id="gux-option-multi-i" role="option" value="b">
        <!---->
        <div class="gux-option" gux-slot-container="">
          Bat
        </div>
      </gux-option-multi>
      <gux-option-multi aria-disabled="false" aria-selected="false" id="gux-option-multi-i" role="option" value="c">
        <!---->
        <div class="gux-option" gux-slot-container="">
          Cat
        </div>
      </gux-option-multi>
    </gux-listbox-multi>
  </gux-dropdown-multi-beta>
  <label for="gux-form-field-input-i" slot="label">
    Default
  </label>
</gux-form-field-dropdown>
`;

exports[`gux-form-field-select multi select dropdown #render input attributes should render component as expected (3) 1`] = `
<gux-form-field-dropdown>
  <mock:shadow-root>
    <div class="gux-above gux-form-field-container">
      <div class="gux-above gux-form-field-label gux-required">
        <slot name="label"></slot>
      </div>
      <div class="gux-input-and-error-container">
        <div class="gux-input">
          <slot></slot>
        </div>
        <div class="gux-form-field-error">
          <gux-icon decorative="" icon-name="alert-warning-octogon"></gux-icon>
          <div class="gux-message">
            <slot name="error"></slot>
          </div>
        </div>
        <div class="gux-form-field-help">
          <div class="gux-message">
            <slot name="help"></slot>
          </div>
        </div>
      </div>
    </div>
  </mock:shadow-root>
  <gux-dropdown-multi-beta required="">
    <mock:shadow-root>
      <div class="gux-dropdown-container">
        <gux-popup-beta>
          <div class="gux-target-container gux-target-container-collapsed" slot="target">
            <button aria-expanded="false" aria-haspopup="listbox" class="gux-field gux-field-button" type="button">
              <div class="gux-field-content">
                <div class="gux-placeholder">
                  Select...
                </div>
              </div>
              <gux-icon class="gux-expand-icon" iconname="chevron-small-down" screenreader-text="Dropdown"></gux-icon>
            </button>
          </div>
          <div class="gux-listbox-container" slot="popup">
            <slot></slot>
          </div>
        </gux-popup-beta>
      </div>
    </mock:shadow-root>
    <gux-listbox-multi aria-multiselectable="true" id="gux-form-field-input-i" role="listbox" tabindex="0">
      <mock:shadow-root>
        <slot></slot>
        <slot name="create"></slot>
      </mock:shadow-root>
      <gux-option-multi aria-disabled="true" aria-selected="false" class="gux-disabled" disabled="" id="gux-option-multi-i" role="option" value="a">
        <!---->
        <div class="gux-option" gux-slot-container="">
          Ant
        </div>
      </gux-option-multi>
      <gux-option-multi aria-disabled="false" aria-selected="false" id="gux-option-multi-i" role="option" value="b">
        <!---->
        <div class="gux-option" gux-slot-container="">
          Bat
        </div>
      </gux-option-multi>
      <gux-option-multi aria-disabled="false" aria-selected="false" id="gux-option-multi-i" role="option" value="c">
        <!---->
        <div class="gux-option" gux-slot-container="">
          Cat
        </div>
      </gux-option-multi>
    </gux-listbox-multi>
  </gux-dropdown-multi-beta>
  <label for="gux-form-field-input-i" slot="label">
    Default
  </label>
</gux-form-field-dropdown>
`;

exports[`gux-form-field-select multi select dropdown #render label-position should render component as expected (1) 1`] = `
<gux-form-field-dropdown>
  <mock:shadow-root>
    <div class="gux-above gux-form-field-container">
      <div class="gux-above gux-form-field-label">
        <slot name="label"></slot>
      </div>
      <div class="gux-input-and-error-container">
        <div class="gux-input">
          <slot></slot>
        </div>
        <div class="gux-form-field-error">
          <gux-icon decorative="" icon-name="alert-warning-octogon"></gux-icon>
          <div class="gux-message">
            <slot name="error"></slot>
          </div>
        </div>
        <div class="gux-form-field-help">
          <div class="gux-message">
            <slot name="help"></slot>
          </div>
        </div>
      </div>
    </div>
  </mock:shadow-root>
  <gux-dropdown-multi-beta>
    <mock:shadow-root>
      <div class="gux-dropdown-container">
        <gux-popup-beta>
          <div class="gux-target-container gux-target-container-collapsed" slot="target">
            <button aria-expanded="false" aria-haspopup="listbox" class="gux-field gux-field-button" type="button">
              <div class="gux-field-content">
                <div class="gux-placeholder">
                  Select...
                </div>
              </div>
              <gux-icon class="gux-expand-icon" iconname="chevron-small-down" screenreader-text="Dropdown"></gux-icon>
            </button>
          </div>
          <div class="gux-listbox-container" slot="popup">
            <slot></slot>
          </div>
        </gux-popup-beta>
      </div>
    </mock:shadow-root>
    <gux-listbox-multi aria-multiselectable="true" id="gux-form-field-input-i" role="listbox" tabindex="0">
      <mock:shadow-root>
        <slot></slot>
        <slot name="create"></slot>
      </mock:shadow-root>
      <gux-option-multi aria-disabled="true" aria-selected="false" class="gux-disabled" disabled="" id="gux-option-multi-i" role="option" value="a">
        <!---->
        <div class="gux-option" gux-slot-container="">
          Ant
        </div>
      </gux-option-multi>
      <gux-option-multi aria-disabled="false" aria-selected="false" id="gux-option-multi-i" role="option" value="b">
        <!---->
        <div class="gux-option" gux-slot-container="">
          Bat
        </div>
      </gux-option-multi>
      <gux-option-multi aria-disabled="false" aria-selected="false" id="gux-option-multi-i" role="option" value="c">
        <!---->
        <div class="gux-option" gux-slot-container="">
          Cat
        </div>
      </gux-option-multi>
    </gux-listbox-multi>
  </gux-dropdown-multi-beta>
  <label for="gux-form-field-input-i" slot="label">
    Default
  </label>
</gux-form-field-dropdown>
`;

exports[`gux-form-field-select multi select dropdown #render label-position should render component as expected (2) 1`] = `
<gux-form-field-dropdown label-position="above">
  <mock:shadow-root>
    <div class="gux-above gux-form-field-container">
      <div class="gux-above gux-form-field-label">
        <slot name="label"></slot>
      </div>
      <div class="gux-input-and-error-container">
        <div class="gux-input">
          <slot></slot>
        </div>
        <div class="gux-form-field-error">
          <gux-icon decorative="" icon-name="alert-warning-octogon"></gux-icon>
          <div class="gux-message">
            <slot name="error"></slot>
          </div>
        </div>
        <div class="gux-form-field-help">
          <div class="gux-message">
            <slot name="help"></slot>
          </div>
        </div>
      </div>
    </div>
  </mock:shadow-root>
  <gux-dropdown-multi-beta>
    <mock:shadow-root>
      <div class="gux-dropdown-container">
        <gux-popup-beta>
          <div class="gux-target-container gux-target-container-collapsed" slot="target">
            <button aria-expanded="false" aria-haspopup="listbox" class="gux-field gux-field-button" type="button">
              <div class="gux-field-content">
                <div class="gux-placeholder">
                  Select...
                </div>
              </div>
              <gux-icon class="gux-expand-icon" iconname="chevron-small-down" screenreader-text="Dropdown"></gux-icon>
            </button>
          </div>
          <div class="gux-listbox-container" slot="popup">
            <slot></slot>
          </div>
        </gux-popup-beta>
      </div>
    </mock:shadow-root>
    <gux-listbox-multi aria-multiselectable="true" id="gux-form-field-input-i" role="listbox" tabindex="0">
      <mock:shadow-root>
        <slot></slot>
        <slot name="create"></slot>
      </mock:shadow-root>
      <gux-option-multi aria-disabled="true" aria-selected="false" class="gux-disabled" disabled="" id="gux-option-multi-i" role="option" value="a">
        <!---->
        <div class="gux-option" gux-slot-container="">
          Ant
        </div>
      </gux-option-multi>
      <gux-option-multi aria-disabled="false" aria-selected="false" id="gux-option-multi-i" role="option" value="b">
        <!---->
        <div class="gux-option" gux-slot-container="">
          Bat
        </div>
      </gux-option-multi>
      <gux-option-multi aria-disabled="false" aria-selected="false" id="gux-option-multi-i" role="option" value="c">
        <!---->
        <div class="gux-option" gux-slot-container="">
          Cat
        </div>
      </gux-option-multi>
    </gux-listbox-multi>
  </gux-dropdown-multi-beta>
  <label for="gux-form-field-input-i" slot="label">
    Default
  </label>
</gux-form-field-dropdown>
`;

exports[`gux-form-field-select multi select dropdown #render label-position should render component as expected (3) 1`] = `
<gux-form-field-dropdown label-position="beside">
  <mock:shadow-root>
    <div class="gux-beside gux-form-field-container">
      <div class="gux-beside gux-form-field-label">
        <slot name="label"></slot>
      </div>
      <div class="gux-input-and-error-container">
        <div class="gux-input">
          <slot></slot>
        </div>
        <div class="gux-form-field-error">
          <gux-icon decorative="" icon-name="alert-warning-octogon"></gux-icon>
          <div class="gux-message">
            <slot name="error"></slot>
          </div>
        </div>
        <div class="gux-form-field-help">
          <div class="gux-message">
            <slot name="help"></slot>
          </div>
        </div>
      </div>
    </div>
  </mock:shadow-root>
  <gux-dropdown-multi-beta>
    <mock:shadow-root>
      <div class="gux-dropdown-container">
        <gux-popup-beta>
          <div class="gux-target-container gux-target-container-collapsed" slot="target">
            <button aria-expanded="false" aria-haspopup="listbox" class="gux-field gux-field-button" type="button">
              <div class="gux-field-content">
                <div class="gux-placeholder">
                  Select...
                </div>
              </div>
              <gux-icon class="gux-expand-icon" iconname="chevron-small-down" screenreader-text="Dropdown"></gux-icon>
            </button>
          </div>
          <div class="gux-listbox-container" slot="popup">
            <slot></slot>
          </div>
        </gux-popup-beta>
      </div>
    </mock:shadow-root>
    <gux-listbox-multi aria-multiselectable="true" id="gux-form-field-input-i" role="listbox" tabindex="0">
      <mock:shadow-root>
        <slot></slot>
        <slot name="create"></slot>
      </mock:shadow-root>
      <gux-option-multi aria-disabled="true" aria-selected="false" class="gux-disabled" disabled="" id="gux-option-multi-i" role="option" value="a">
        <!---->
        <div class="gux-option" gux-slot-container="">
          Ant
        </div>
      </gux-option-multi>
      <gux-option-multi aria-disabled="false" aria-selected="false" id="gux-option-multi-i" role="option" value="b">
        <!---->
        <div class="gux-option" gux-slot-container="">
          Bat
        </div>
      </gux-option-multi>
      <gux-option-multi aria-disabled="false" aria-selected="false" id="gux-option-multi-i" role="option" value="c">
        <!---->
        <div class="gux-option" gux-slot-container="">
          Cat
        </div>
      </gux-option-multi>
    </gux-listbox-multi>
  </gux-dropdown-multi-beta>
  <label for="gux-form-field-input-i" slot="label">
    Default
  </label>
</gux-form-field-dropdown>
`;

exports[`gux-form-field-select multi select dropdown #render label-position should render component as expected (4) 1`] = `
<gux-form-field-dropdown label-position="screenreader">
  <mock:shadow-root>
    <div class="gux-form-field-container gux-screenreader">
      <div class="gux-form-field-label gux-screenreader">
        <slot name="label"></slot>
      </div>
      <div class="gux-input-and-error-container">
        <div class="gux-input">
          <slot></slot>
        </div>
        <div class="gux-form-field-error">
          <gux-icon decorative="" icon-name="alert-warning-octogon"></gux-icon>
          <div class="gux-message">
            <slot name="error"></slot>
          </div>
        </div>
        <div class="gux-form-field-help">
          <div class="gux-message">
            <slot name="help"></slot>
          </div>
        </div>
      </div>
    </div>
  </mock:shadow-root>
  <gux-dropdown-multi-beta>
    <mock:shadow-root>
      <div class="gux-dropdown-container">
        <gux-popup-beta>
          <div class="gux-target-container gux-target-container-collapsed" slot="target">
            <button aria-expanded="false" aria-haspopup="listbox" class="gux-field gux-field-button" type="button">
              <div class="gux-field-content">
                <div class="gux-placeholder">
                  Select...
                </div>
              </div>
              <gux-icon class="gux-expand-icon" iconname="chevron-small-down" screenreader-text="Dropdown"></gux-icon>
            </button>
          </div>
          <div class="gux-listbox-container" slot="popup">
            <slot></slot>
          </div>
        </gux-popup-beta>
      </div>
    </mock:shadow-root>
    <gux-listbox-multi aria-multiselectable="true" id="gux-form-field-input-i" role="listbox" tabindex="0">
      <mock:shadow-root>
        <slot></slot>
        <slot name="create"></slot>
      </mock:shadow-root>
      <gux-option-multi aria-disabled="true" aria-selected="false" class="gux-disabled" disabled="" id="gux-option-multi-i" role="option" value="a">
        <!---->
        <div class="gux-option" gux-slot-container="">
          Ant
        </div>
      </gux-option-multi>
      <gux-option-multi aria-disabled="false" aria-selected="false" id="gux-option-multi-i" role="option" value="b">
        <!---->
        <div class="gux-option" gux-slot-container="">
          Bat
        </div>
      </gux-option-multi>
      <gux-option-multi aria-disabled="false" aria-selected="false" id="gux-option-multi-i" role="option" value="c">
        <!---->
        <div class="gux-option" gux-slot-container="">
          Cat
        </div>
      </gux-option-multi>
    </gux-listbox-multi>
  </gux-dropdown-multi-beta>
  <label for="gux-form-field-input-i" slot="label">
    Default
  </label>
</gux-form-field-dropdown>
`;

exports[`gux-form-field-select single select dropdown #render input attributes should render component as expected (1) 1`] = `
<gux-form-field-dropdown>
  <mock:shadow-root>
    <div class="gux-above gux-form-field-container">
      <div class="gux-above gux-form-field-label">
        <slot name="label"></slot>
      </div>
      <div class="gux-input-and-error-container">
        <div class="gux-input">
          <slot></slot>
        </div>
        <div class="gux-form-field-error">
          <gux-icon decorative="" icon-name="alert-warning-octogon"></gux-icon>
          <div class="gux-message">
            <slot name="error"></slot>
          </div>
        </div>
        <div class="gux-form-field-help">
          <div class="gux-message">
            <slot name="help"></slot>
          </div>
        </div>
      </div>
    </div>
  </mock:shadow-root>
  <gux-dropdown>
    <mock:shadow-root>
      <gux-popup-beta>
        <div class="gux-target-container-collapsed" slot="target">
          <button aria-expanded="false" aria-haspopup="listbox" class="gux-field gux-field-button" type="button">
            <div class="gux-field-content">
              <div class="gux-placeholder">
                Select...
              </div>
            </div>
            <gux-icon class="gux-expand-icon" iconname="chevron-small-down" screenreader-text="Dropdown"></gux-icon>
          </button>
        </div>
        <div class="gux-listbox-container" slot="popup">
          <slot></slot>
        </div>
      </gux-popup-beta>
    </mock:shadow-root>
    <gux-listbox id="gux-form-field-input-i" role="listbox" tabindex="0">
      <mock:shadow-root>
        <slot></slot>
      </mock:shadow-root>
      <gux-option aria-disabled="true" class="gux-disabled" disabled="" id="gux-option-i" role="option" value="a">
        <!---->
        Ant
      </gux-option>
      <gux-option aria-disabled="false" aria-selected="false" id="gux-option-i" role="option" value="b">
        <!---->
        Bat
      </gux-option>
      <gux-option aria-disabled="false" aria-selected="false" id="gux-option-i" role="option" value="c">
        <!---->
        Cat
      </gux-option>
    </gux-listbox>
  </gux-dropdown>
  <label for="gux-form-field-input-i" slot="label">
    Default
  </label>
</gux-form-field-dropdown>
`;

exports[`gux-form-field-select single select dropdown #render input attributes should render component as expected (2) 1`] = `
<gux-form-field-dropdown>
  <mock:shadow-root>
    <div class="gux-above gux-form-field-container">
      <div class="gux-above gux-form-field-label">
        <slot name="label"></slot>
      </div>
      <div class="gux-input-and-error-container">
        <div class="gux-disabled gux-input">
          <slot></slot>
        </div>
        <div class="gux-form-field-error">
          <gux-icon decorative="" icon-name="alert-warning-octogon"></gux-icon>
          <div class="gux-message">
            <slot name="error"></slot>
          </div>
        </div>
        <div class="gux-form-field-help">
          <div class="gux-message">
            <slot name="help"></slot>
          </div>
        </div>
      </div>
    </div>
  </mock:shadow-root>
  <gux-dropdown disabled="">
    <mock:shadow-root>
      <gux-popup-beta disabled="">
        <div class="gux-target-container-collapsed" slot="target">
          <button aria-expanded="false" aria-haspopup="listbox" class="gux-field gux-field-button" disabled="" type="button">
            <div class="gux-field-content">
              <div class="gux-placeholder">
                Select...
              </div>
            </div>
            <gux-icon class="gux-expand-icon" iconname="chevron-small-down" screenreader-text="Dropdown"></gux-icon>
          </button>
        </div>
        <div class="gux-listbox-container" slot="popup">
          <slot></slot>
        </div>
      </gux-popup-beta>
    </mock:shadow-root>
    <gux-listbox id="gux-form-field-input-i" role="listbox" tabindex="0">
      <mock:shadow-root>
        <slot></slot>
      </mock:shadow-root>
      <gux-option aria-disabled="true" class="gux-disabled" disabled="" id="gux-option-i" role="option" value="a">
        <!---->
        Ant
      </gux-option>
      <gux-option aria-disabled="false" aria-selected="false" id="gux-option-i" role="option" value="b">
        <!---->
        Bat
      </gux-option>
      <gux-option aria-disabled="false" aria-selected="false" id="gux-option-i" role="option" value="c">
        <!---->
        Cat
      </gux-option>
    </gux-listbox>
  </gux-dropdown>
  <label for="gux-form-field-input-i" slot="label">
    Default
  </label>
</gux-form-field-dropdown>
`;

exports[`gux-form-field-select single select dropdown #render input attributes should render component as expected (3) 1`] = `
<gux-form-field-dropdown>
  <mock:shadow-root>
    <div class="gux-above gux-form-field-container">
      <div class="gux-above gux-form-field-label gux-required">
        <slot name="label"></slot>
      </div>
      <div class="gux-input-and-error-container">
        <div class="gux-input">
          <slot></slot>
        </div>
        <div class="gux-form-field-error">
          <gux-icon decorative="" icon-name="alert-warning-octogon"></gux-icon>
          <div class="gux-message">
            <slot name="error"></slot>
          </div>
        </div>
        <div class="gux-form-field-help">
          <div class="gux-message">
            <slot name="help"></slot>
          </div>
        </div>
      </div>
    </div>
  </mock:shadow-root>
  <gux-dropdown required="">
    <mock:shadow-root>
      <gux-popup-beta>
        <div class="gux-target-container-collapsed" slot="target">
          <button aria-expanded="false" aria-haspopup="listbox" class="gux-field gux-field-button" type="button">
            <div class="gux-field-content">
              <div class="gux-placeholder">
                Select...
              </div>
            </div>
            <gux-icon class="gux-expand-icon" iconname="chevron-small-down" screenreader-text="Dropdown"></gux-icon>
          </button>
        </div>
        <div class="gux-listbox-container" slot="popup">
          <slot></slot>
        </div>
      </gux-popup-beta>
    </mock:shadow-root>
    <gux-listbox id="gux-form-field-input-i" role="listbox" tabindex="0">
      <mock:shadow-root>
        <slot></slot>
      </mock:shadow-root>
      <gux-option aria-disabled="true" class="gux-disabled" disabled="" id="gux-option-i" role="option" value="a">
        <!---->
        Ant
      </gux-option>
      <gux-option aria-disabled="false" aria-selected="false" id="gux-option-i" role="option" value="b">
        <!---->
        Bat
      </gux-option>
      <gux-option aria-disabled="false" aria-selected="false" id="gux-option-i" role="option" value="c">
        <!---->
        Cat
      </gux-option>
    </gux-listbox>
  </gux-dropdown>
  <label for="gux-form-field-input-i" slot="label">
    Default
  </label>
</gux-form-field-dropdown>
`;

exports[`gux-form-field-select single select dropdown #render label-position should render component as expected (1) 1`] = `
<gux-form-field-dropdown>
  <mock:shadow-root>
    <div class="gux-above gux-form-field-container">
      <div class="gux-above gux-form-field-label">
        <slot name="label"></slot>
      </div>
      <div class="gux-input-and-error-container">
        <div class="gux-input">
          <slot></slot>
        </div>
        <div class="gux-form-field-error">
          <gux-icon decorative="" icon-name="alert-warning-octogon"></gux-icon>
          <div class="gux-message">
            <slot name="error"></slot>
          </div>
        </div>
        <div class="gux-form-field-help">
          <div class="gux-message">
            <slot name="help"></slot>
          </div>
        </div>
      </div>
    </div>
  </mock:shadow-root>
  <gux-dropdown>
    <mock:shadow-root>
      <gux-popup-beta>
        <div class="gux-target-container-collapsed" slot="target">
          <button aria-expanded="false" aria-haspopup="listbox" class="gux-field gux-field-button" type="button">
            <div class="gux-field-content">
              <div class="gux-placeholder">
                Select...
              </div>
            </div>
            <gux-icon class="gux-expand-icon" iconname="chevron-small-down" screenreader-text="Dropdown"></gux-icon>
          </button>
        </div>
        <div class="gux-listbox-container" slot="popup">
          <slot></slot>
        </div>
      </gux-popup-beta>
    </mock:shadow-root>
    <gux-listbox id="gux-form-field-input-i" role="listbox" tabindex="0">
      <mock:shadow-root>
        <slot></slot>
      </mock:shadow-root>
      <gux-option aria-disabled="true" class="gux-disabled" disabled="" id="gux-option-i" role="option" value="a">
        <!---->
        Ant
      </gux-option>
      <gux-option aria-disabled="false" aria-selected="false" id="gux-option-i" role="option" value="b">
        <!---->
        Bat
      </gux-option>
      <gux-option aria-disabled="false" aria-selected="false" id="gux-option-i" role="option" value="c">
        <!---->
        Cat
      </gux-option>
    </gux-listbox>
  </gux-dropdown>
  <label for="gux-form-field-input-i" slot="label">
    Default
  </label>
</gux-form-field-dropdown>
`;

exports[`gux-form-field-select single select dropdown #render label-position should render component as expected (2) 1`] = `
<gux-form-field-dropdown label-position="above">
  <mock:shadow-root>
    <div class="gux-above gux-form-field-container">
      <div class="gux-above gux-form-field-label">
        <slot name="label"></slot>
      </div>
      <div class="gux-input-and-error-container">
        <div class="gux-input">
          <slot></slot>
        </div>
        <div class="gux-form-field-error">
          <gux-icon decorative="" icon-name="alert-warning-octogon"></gux-icon>
          <div class="gux-message">
            <slot name="error"></slot>
          </div>
        </div>
        <div class="gux-form-field-help">
          <div class="gux-message">
            <slot name="help"></slot>
          </div>
        </div>
      </div>
    </div>
  </mock:shadow-root>
  <gux-dropdown>
    <mock:shadow-root>
      <gux-popup-beta>
        <div class="gux-target-container-collapsed" slot="target">
          <button aria-expanded="false" aria-haspopup="listbox" class="gux-field gux-field-button" type="button">
            <div class="gux-field-content">
              <div class="gux-placeholder">
                Select...
              </div>
            </div>
            <gux-icon class="gux-expand-icon" iconname="chevron-small-down" screenreader-text="Dropdown"></gux-icon>
          </button>
        </div>
        <div class="gux-listbox-container" slot="popup">
          <slot></slot>
        </div>
      </gux-popup-beta>
    </mock:shadow-root>
    <gux-listbox id="gux-form-field-input-i" role="listbox" tabindex="0">
      <mock:shadow-root>
        <slot></slot>
      </mock:shadow-root>
      <gux-option aria-disabled="true" class="gux-disabled" disabled="" id="gux-option-i" role="option" value="a">
        <!---->
        Ant
      </gux-option>
      <gux-option aria-disabled="false" aria-selected="false" id="gux-option-i" role="option" value="b">
        <!---->
        Bat
      </gux-option>
      <gux-option aria-disabled="false" aria-selected="false" id="gux-option-i" role="option" value="c">
        <!---->
        Cat
      </gux-option>
    </gux-listbox>
  </gux-dropdown>
  <label for="gux-form-field-input-i" slot="label">
    Default
  </label>
</gux-form-field-dropdown>
`;

exports[`gux-form-field-select single select dropdown #render label-position should render component as expected (3) 1`] = `
<gux-form-field-dropdown label-position="beside">
  <mock:shadow-root>
    <div class="gux-beside gux-form-field-container">
      <div class="gux-beside gux-form-field-label">
        <slot name="label"></slot>
      </div>
      <div class="gux-input-and-error-container">
        <div class="gux-input">
          <slot></slot>
        </div>
        <div class="gux-form-field-error">
          <gux-icon decorative="" icon-name="alert-warning-octogon"></gux-icon>
          <div class="gux-message">
            <slot name="error"></slot>
          </div>
        </div>
        <div class="gux-form-field-help">
          <div class="gux-message">
            <slot name="help"></slot>
          </div>
        </div>
      </div>
    </div>
  </mock:shadow-root>
  <gux-dropdown>
    <mock:shadow-root>
      <gux-popup-beta>
        <div class="gux-target-container-collapsed" slot="target">
          <button aria-expanded="false" aria-haspopup="listbox" class="gux-field gux-field-button" type="button">
            <div class="gux-field-content">
              <div class="gux-placeholder">
                Select...
              </div>
            </div>
            <gux-icon class="gux-expand-icon" iconname="chevron-small-down" screenreader-text="Dropdown"></gux-icon>
          </button>
        </div>
        <div class="gux-listbox-container" slot="popup">
          <slot></slot>
        </div>
      </gux-popup-beta>
    </mock:shadow-root>
    <gux-listbox id="gux-form-field-input-i" role="listbox" tabindex="0">
      <mock:shadow-root>
        <slot></slot>
      </mock:shadow-root>
      <gux-option aria-disabled="true" class="gux-disabled" disabled="" id="gux-option-i" role="option" value="a">
        <!---->
        Ant
      </gux-option>
      <gux-option aria-disabled="false" aria-selected="false" id="gux-option-i" role="option" value="b">
        <!---->
        Bat
      </gux-option>
      <gux-option aria-disabled="false" aria-selected="false" id="gux-option-i" role="option" value="c">
        <!---->
        Cat
      </gux-option>
    </gux-listbox>
  </gux-dropdown>
  <label for="gux-form-field-input-i" slot="label">
    Default
  </label>
</gux-form-field-dropdown>
`;

exports[`gux-form-field-select single select dropdown #render label-position should render component as expected (4) 1`] = `
<gux-form-field-dropdown label-position="screenreader">
  <mock:shadow-root>
    <div class="gux-form-field-container gux-screenreader">
      <div class="gux-form-field-label gux-screenreader">
        <slot name="label"></slot>
      </div>
      <div class="gux-input-and-error-container">
        <div class="gux-input">
          <slot></slot>
        </div>
        <div class="gux-form-field-error">
          <gux-icon decorative="" icon-name="alert-warning-octogon"></gux-icon>
          <div class="gux-message">
            <slot name="error"></slot>
          </div>
        </div>
        <div class="gux-form-field-help">
          <div class="gux-message">
            <slot name="help"></slot>
          </div>
        </div>
      </div>
    </div>
  </mock:shadow-root>
  <gux-dropdown>
    <mock:shadow-root>
      <gux-popup-beta>
        <div class="gux-target-container-collapsed" slot="target">
          <button aria-expanded="false" aria-haspopup="listbox" class="gux-field gux-field-button" type="button">
            <div class="gux-field-content">
              <div class="gux-placeholder">
                Select...
              </div>
            </div>
            <gux-icon class="gux-expand-icon" iconname="chevron-small-down" screenreader-text="Dropdown"></gux-icon>
          </button>
        </div>
        <div class="gux-listbox-container" slot="popup">
          <slot></slot>
        </div>
      </gux-popup-beta>
    </mock:shadow-root>
    <gux-listbox id="gux-form-field-input-i" role="listbox" tabindex="0">
      <mock:shadow-root>
        <slot></slot>
      </mock:shadow-root>
      <gux-option aria-disabled="true" class="gux-disabled" disabled="" id="gux-option-i" role="option" value="a">
        <!---->
        Ant
      </gux-option>
      <gux-option aria-disabled="false" aria-selected="false" id="gux-option-i" role="option" value="b">
        <!---->
        Bat
      </gux-option>
      <gux-option aria-disabled="false" aria-selected="false" id="gux-option-i" role="option" value="c">
        <!---->
        Cat
      </gux-option>
    </gux-listbox>
  </gux-dropdown>
  <label for="gux-form-field-input-i" slot="label">
    Default
  </label>
</gux-form-field-dropdown>
`;
